Fixed project cards clipping on big texts

--- a/css/styles.css
+++ b/css/styles.css
@@ -4465,7 +4465,7 @@ summary.glint:hover {
 
 @media (min-width: 768px) {
   .envelope {
-    height: 300px;
+    min-height: 300px;
   }
 }
 
